final changes before deploying

--- a/popup.html
+++ b/popup.html
@@ -85,7 +85,7 @@
                     <p id="headTxt">Roma</p>
                 </div>
             </div>
-            <span class="small-head-font">ADD TAB TO NEW FOLDER </span><span class="small-head-font-sub">(Click &#9166;
+            <span class="small-head-font">ADD TAB TO NEW FOLDER </span><span class="small-head-font-sub">(Click &#8629;
                 to add)</span>
             <div class="input-group def-top-small-margin">
                 <input id="newFldInp" type="text" class="form-control def-inp-style" placeholder="Add tab to new folder"
@@ -118,7 +118,7 @@
         </div>
 
         <script src="/js/popup.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="/js/jquery.js"></script>
     </div>
 </body>
 
